ViSP 2.4.x (released ...)
  - Testing
    - Use of CDash insteed of Dart2. Dashboards are sent to 
      http://cdash.irisa.fr/CDash/index.php?project=ViSP 

----------------------------------------------	
ViSP 2.4.2 (released March 27, 2008)
  - New classes
    - vpCalibration : calibration toolkit for intrinsic and 
        extrinsic parameters of perspective camera.
    - vpXmlParserCamera : Parser xml to read and save camera parameters 
        from vpCameraParameters class. 
    - vpHinkley : Hinkley's cumulative sum test computation.
    - vpMePath  : Tracking of a white curve by using line and parabola 
        tracker.
    - vpKeyboard : Gets a key from the keyboard without waiting for the 
        enter key.
    - vpParallelPort : Parallel port management under unix.
    - vpRingLight : Irisa's ring light controller.
    - vpKltOpencv : Interface for the KLT (Kanade-Lucas-Tomasi) feature 
        tracker implemented with opencv.
  - New Features
  - Bug fix and improvement
    - vpCameraParameters : support for radial distortion camera model.
    - vpAfma6 : Add a getCameraParameters functionnality
    - vpSimulator : either SoWin or SoQt or SoXt is needed to use 
        vpSimulator class.
    - vpDot: setMaxDotSize(double percentage) replace 
        setNbMaxPoint(double nb) to be less image size dependent.
        The maximal dot size is set by default to 0.25% (quarter image size).
        setGrayLevelPrecision(double grayLevelPrecision) has been 
        added for a better management of gray dots detection.
    - vpDot2: 
        Changes in searchDotsInArea() :
          The algorithm search now in the bounding boxes of the bad dots.
          Bug fixed : we could fall in an infinite loop.
          Split accuracy private variable into grayLevelPrecision and 
          sizePrecision. The gray level min and max are well calculated for 
          white and black dots.
        Add setEllipsoidShapePrecision() to turn on/off and modify the test 